# CV1617-50645-65092

./: CMakeLists.txt  README.md
01/: AddingTwo.cpp  DisplayAndSaveImage.cpp  DisplayImage.cpp  Example01.cpp
01/aula01/: AddingTwoImg.cpp  DisplayImage.cpp  LoadSaveImage.cpp
02/: CMakeLists.txt  Contrast.cpp  Filters.cpp  G3Exec2.cpp  G3Exec3.cpp  G3Exec5.cpp  G3Exec7.cpp  RGB_Histogram.cpp  SkinDetection.cpp  videoCapture.cpp
02/aula01/: ChangingContrast.cpp  LoadSaveIterator.cpp  LoadSavePointer.cpp
03/: CMakeLists.txt  FindingContours.cpp  G3Exec1.cpp  G3Exec4.cpp  G3Exec6.cpp  HarrisCorner.cpp  HistogramCompare.cpp  Scharr.cpp  SkinDetection.cpp  Sobel.cpp
04/: CMakeLists.txt  CannyEdgeDetector.cpp  Laplacian.cpp  Scharr.cpp  Sobel.cpp
05/: CMakeLists.txt  chessboard.cpp  chessboard_refined.cpp  externalCameraCalibration.cpp  projectPoints.cpp  projectPointsToPCCamera.cpp
06/: CMakeLists.txt  chessboardStereo.cpp  imageRectification.cpp  imageRectification_reconstruct.cpp  lensDistortion.cpp  stereoCalibration.cpp
07/: 3DReconstruction.cpp  CMakeLists.txt  ICP_alignment.cpp  PCD_3D_Format.cpp  mapDisparity.cpp  viewcloud.cpp
09/: CMakeLists.txt  background_separation.cpp  lucasKanade.cpp  lucasKanade.py  object_tracker.cpp
10/: CMakeLists.txt  face_detection.py  templateMatching.cpp
10/s1/: 1.pgm  2.pgm  3.pgm
11/: CMakeLists.txt  SURF_FlannMatcher.cpp  ex11_houghcircles.cpp  ex11_houghlines.cpp
projeto/: CMakeLists.txt  Exame_Exemplo.doc  links.txt  projeto.cpp  projeto2.cpp  solution.txt  solution2.txt
tutorial para ficheiros em falta/: instalacao opencv_contrib
